[gd_scene load_steps=28 format=3 uid="uid://brh1yknqh4ux6"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_t2lj5"]
[ext_resource type="Script" uid="uid://do4lb6hapbydx" path="res://src/ui/components/auth/lobby.gd" id="2_fu4v6"]
[ext_resource type="Texture2D" uid="uid://dpippmiepkyeb" path="res://decentraland_logo.png" id="3_mwmw7"]
[ext_resource type="Texture2D" uid="uid://caocucxv324yx" path="res://assets/ui/isologotipo.svg" id="3_p5qhj"]
[ext_resource type="Script" uid="uid://bhwm0bl5qoiph" path="res://src/ui/components/utils/safe_margin_container.gd" id="3_wk266"]
[ext_resource type="FontFile" uid="uid://hqi2efd5kd17" path="res://assets/themes/fonts/inter/Inter-Bold.ttf" id="4_ghcwt"]
[ext_resource type="FontFile" uid="uid://di6yadh02vrla" path="res://assets/themes/fonts/inter/Inter-Regular.ttf" id="5_g62s5"]
[ext_resource type="FontFile" uid="uid://d2vlaexk003yw" path="res://assets/themes/fonts/inter/Inter-Medium.ttf" id="7_vcjym"]
[ext_resource type="PackedScene" uid="uid://c8dlajk0at8no" path="res://src/ui/components/backpack/backpack.tscn" id="9_qv8xq"]
[ext_resource type="Theme" uid="uid://bn7q4ap7m5gdu" path="res://assets/themes/dcl_theme.tres" id="9_ypsmd"]
[ext_resource type="PackedScene" uid="uid://buu3ox7iefpgx" path="res://src/ui/components/loading_spinner/loading_spinner.tscn" id="11_7iulh"]
[ext_resource type="FontFile" uid="uid://ckaye4autekyg" path="res://assets/themes/fonts/inter/Inter-ExtraBold.ttf" id="12_s6a2k"]
[ext_resource type="PackedScene" uid="uid://cy43hvd5bivso" path="res://src/ui/components/backpack/avatar_preview.tscn" id="15_n5dun"]
[ext_resource type="Texture2D" uid="uid://dpto8joivusog" path="res://assets/themes/dark_dcl_theme/icons/cancel-icon.svg" id="15_ypsmd"]
[ext_resource type="PackedScene" uid="uid://bi3eesytuc1tr" path="res://src/ui/components/auth/login.tscn" id="17_vcjym"]
[ext_resource type="FontFile" uid="uid://nlqb3vmhfsld" path="res://assets/themes/fonts/inter/inter_700.ttf" id="18_2q7xc"]
[ext_resource type="Texture2D" uid="uid://0562185xxlpt" path="res://assets/ui/sign-in/dice.svg" id="18_3tlbd"]
[ext_resource type="LabelSettings" uid="uid://ipxcah14n2ng" path="res://assets/themes/lobby_title.tres" id="18_ypsmd"]
[ext_resource type="FontFile" uid="uid://c578syx7u7pdh" path="res://assets/themes/fonts/lato_family/Lato-Italic.ttf" id="19_ypsmd"]
[ext_resource type="FontFile" uid="uid://drw8yv4w843s4" path="res://assets/themes/fonts/inter/Inter-SemiBold.ttf" id="21_ypsmd"]

[sub_resource type="Gradient" id="Gradient_kt8ab"]
offsets = PackedFloat32Array(0.00296736, 1)
colors = PackedColorArray(0.776471, 0.25098, 0.803922, 1, 0.411765, 0.121569, 0.662745, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q7xc"]
gradient = SubResource("Gradient_kt8ab")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mib7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqbts"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 0.176471, 0.333333, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_2q7xc"]
font = ExtResource("19_ypsmd")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_vcjym"]
font = ExtResource("18_2q7xc")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_ypsmd"]
font = ExtResource("18_2q7xc")
font_size = 56

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t2lj5")
script = ExtResource("2_fu4v6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_2q7xc")
expand_mode = 3

[node name="VersionMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_wk266")
metadata/_custom_type_script = "uid://bhwm0bl5qoiph"

[node name="Version" type="Control" parent="VersionMargin"]
layout_mode = 2
mouse_filter = 2

[node name="Label_Version" type="Label" parent="VersionMargin/Version"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -28.0
offset_right = 510.0
offset_bottom = -10.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.705882)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("21_ypsmd")
theme_override_font_sizes/font_size = 14
text = "v0.0.0"

[node name="Main" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_wk266")

[node name="Loading" type="Control" parent="Main"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TextureProgressBar" parent="Main/Loading" instance=ExtResource("11_7iulh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
speed_scale = 2.0

[node name="TextureRect2" type="TextureRect" parent="Main/Loading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mwmw7")
expand_mode = 1
stretch_mode = 4

[node name="Start" type="Control" parent="Main"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(425, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Start/MarginContainer"]
custom_minimum_size = Vector2(425, 450)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/Start/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
texture = ExtResource("3_p5qhj")
expand_mode = 3
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="Main/Start/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="RichTextLabel" type="RichTextLabel" parent="Main/Start/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_vcjym")
theme_override_fonts/bold_font = ExtResource("4_ghcwt")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
text = "[b]Discover a virtual social world[/b] shaped by its community of creators & explorers."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Main/Start/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Button_Start" type="Button" parent="Main/Start/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 30
text = "CREATE ACCOUNT"
icon_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="Main/Start/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Button_GoToSignIn" type="Button" parent="Main/Start/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_type_variation = &"SecondaryButton"
theme_override_font_sizes/font_size = 30
text = "SIGN IN"

[node name="BackpackContainer" type="Control" parent="Main"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/BackpackContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Main/BackpackContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="Label" parent="Main/BackpackContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 68
text = "Create Avatar"
horizontal_alignment = 1

[node name="Backpack" parent="Main/BackpackContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_qv8xq")]
unique_name_in_owner = true
layout_mode = 2
hide_navbar = true

[node name="Button_Continue" type="Button" parent="Main/BackpackContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_override_font_sizes/font_size = 30
text = "NEXT"
icon_alignment = 2

[node name="RestoreAndChooseName" type="Control" parent="Main"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/RestoreAndChooseName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 125

[node name="VBoxContainer" type="VBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer"]
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ChooseNameHead" type="VBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(425, 0)
layout_mode = 2

[node name="Label_Name" type="Label" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 36
text = "Pick Your Name"
label_settings = ExtResource("18_ypsmd")
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="HBoxContainer" type="HBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LineEdit_ChooseName" type="LineEdit" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_font_sizes/font_size = 24
placeholder_text = "Username"
max_length = 15
clear_button_enabled = true

[node name="Button_RandomName" type="Button" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead/HBoxContainer"]
texture_filter = 4
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
theme = ExtResource("9_ypsmd")
theme_override_styles/normal = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/hover = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rqbts")
theme_override_styles/focus = SubResource("StyleBoxFlat_rqbts")
icon = ExtResource("18_3tlbd")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("5_g62s5")
theme_override_font_sizes/font_size = 20
text = "*Avoid using your real name for safety"
label_settings = SubResource("LabelSettings_2q7xc")

[node name="RestoreNameHead" type="VBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameHead"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_p5qhj")
expand_mode = 3
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameHead"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Label" type="Label" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameHead"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("5_g62s5")
theme_override_font_sizes/font_size = 36
text = "Welcome Back!"
label_settings = ExtResource("18_ypsmd")
horizontal_alignment = 1

[node name="TextureRect" type="Control" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvatarPreview" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/TextureRect" instance=ExtResource("15_n5dun")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
offset_top = -50.0
offset_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
hide_name = true
can_move = false

[node name="Label_Name" type="Label" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -65.0
offset_right = 270.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("5_g62s5")
theme_override_font_sizes/font_size = 36
text = "Kuruk"
label_settings = SubResource("LabelSettings_vcjym")
horizontal_alignment = 1

[node name="ChooseNameFooter" type="VBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button_Next" type="Button" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameFooter"]
unique_name_in_owner = true
custom_minimum_size = Vector2(425, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 30
disabled = true
text = "NEXT"
icon_alignment = 2

[node name="RestoreNameFooter" type="VBoxContainer" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameFooter"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Button_JumpIn" type="Button" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameFooter"]
custom_minimum_size = Vector2(425, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 30
text = "LET'S GO"
icon_alignment = 2

[node name="Button_DifferentAccount" type="Button" parent="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameFooter"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_type_variation = &"SecondaryButton"
theme_override_font_sizes/font_size = 30
text = "USE ANOTHER ACCOUNT"

[node name="SignIn" type="Control" parent="Main"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/SignIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Main/SignIn/MarginContainer"]
custom_minimum_size = Vector2(425, 450)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/SignIn/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
texture = ExtResource("3_p5qhj")
expand_mode = 3
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="Main/SignIn/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="VBoxContainer_SignInStep1" type="VBoxContainer" parent="Main/SignIn/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SignInTitle" type="Label" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 36
text = "Sign In to Decentraland"
label_settings = ExtResource("18_ypsmd")
autowrap_mode = 3

[node name="HSeparator5" type="HSeparator" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1"]
layout_mode = 2
theme_override_constants/separation = 45
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Login" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1" instance=ExtResource("17_vcjym")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1"]
layout_mode = 2
theme_override_constants/separation = 45
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Button_EnterAsGuest" type="Button" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_type_variation = &"SecondaryButton"
theme_override_font_sizes/font_size = 24
text = "QUICK DIVE AS A GUEST"
expand_icon = true

[node name="VBoxContainer_SignInStep2" type="VBoxContainer" parent="Main/SignIn/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label_Title" type="Label" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2"]
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_fonts/font = ExtResource("4_ghcwt")
theme_override_font_sizes/font_size = 64
text = "Opening Browser..."
label_settings = SubResource("LabelSettings_ypsmd")
autowrap_mode = 3

[node name="HSeparator5" type="HSeparator" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="TextureProgressBar" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2" instance=ExtResource("11_7iulh")]
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator4" type="HSeparator" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mib7")

[node name="Button_Cancel" type="Button" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_ypsmd")
theme_type_variation = &"SecondaryButton"
theme_override_constants/icon_max_width = 40
theme_override_fonts/font = ExtResource("12_s6a2k")
theme_override_font_sizes/font_size = 30
text = "CANCEL"
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2/Button_Cancel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -20.0
offset_right = -70.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_ypsmd")
expand_mode = 1

[connection signal="pressed" from="Main/Start/MarginContainer/VBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Main/Start/MarginContainer/VBoxContainer/Button_GoToSignIn" to="." method="_on_button_go_to_sign_in_pressed"]
[connection signal="pressed" from="Main/BackpackContainer/MarginContainer/VBoxContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="text_changed" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead/HBoxContainer/LineEdit_ChooseName" to="." method="_on_line_edit_choose_name_text_changed"]
[connection signal="pressed" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameHead/HBoxContainer/Button_RandomName" to="." method="_on_button_random_name_pressed"]
[connection signal="gui_input" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/TextureRect/AvatarPreview" to="." method="_on_avatar_preview_gui_input"]
[connection signal="pressed" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/ChooseNameFooter/Button_Next" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameFooter/Button_JumpIn" to="." method="_on_button_jump_in_pressed"]
[connection signal="pressed" from="Main/RestoreAndChooseName/MarginContainer/VBoxContainer/RestoreNameFooter/Button_DifferentAccount" to="." method="_on_button_different_account_pressed"]
[connection signal="pressed" from="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep1/Button_EnterAsGuest" to="." method="_on_button_enter_as_guest_pressed"]
[connection signal="pressed" from="Main/SignIn/MarginContainer/VBoxContainer/VBoxContainer_SignInStep2/Button_Cancel" to="." method="_on_button_cancel_pressed"]
